--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="author" content="Yevgen Farasevych">
     <title>Home page</title>
     <link rel="stylesheet" href="style.css"><!-- the type attribute is not necessary -->
+
   </head>
   <body>
     <!--BEGIN layout-->
@@ -96,6 +97,7 @@
         <h2>WEB dev log</h2>
           <h3>2017</h3>
             <ul>
+              <li class="grid1"><a href="https://habrahabr.ru/post/332572/" title="2017-07-12">Правда ли уже пора использовать CSS Grid Layout?</a></li>
               <li><a href="https://dou.ua/lenta/articles/fundamental-knowledge-is-a-must/" title="2017-07-04">Как выжить в круговороте современного IT, или Зачем изучать основы</a></li>
               <li class="not-learned bem1"><a href="http://nicothin.github.io/idiomatic-pre-CSS/#bem">Как работать с CSS-препроцессорами и БЭМ</a></li>
               <li class="not-learned"><a href="http://css.yoksel.ru/specifity/">Сколько весят селекторы?</a></li>
