--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       <div class="web schools">
         <h2>Info</h2>
         <ul>
+          <li><a href="https://www.w3.org/TR/CSS21/propidx.html" title="www.w3.org">Cписок наследуемых свойств в стандарте CSS</a></li>
           <li><a href="https://docs.emmet.io/cheat-sheet/">Emmet Documentation Cheat Sheet</a></li>
           <li><a href="https://habrahabr.ru/company/netologyru/blog/328426/">Как стать веб-разработчиком в 2017 году — план действий</a></li>
           <li><a href="http://mynameismatthieu.com/WOW/">wow-js</a></li>
