--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
         <h2>WEB dev log</h2>
           <h3>2017</h3>
             <ul>
+              <li><a href="https://habrahabr.ru/post/253297/" title="2017-07-23">Не учите фреймворки, учите архитектуру</a></li>
               <li><a href="http://simonenko.su/32197993404/use-css3-box-sizing" title="2017-07-19">Используйте свойство box-sizing</a></li>
               <li class="grid1"><a href="https://habrahabr.ru/post/332572/" title="2017-07-12">Правда ли уже пора использовать CSS Grid Layout?</a></li>
               <li><a href="https://dou.ua/lenta/articles/fundamental-knowledge-is-a-must/" title="2017-07-04">Как выжить в круговороте современного IT, или Зачем изучать основы</a></li>
