add link about js

--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@
         <h2>WEB dev log</h2>
           <h3>2017</h3>
             <ul>
+              <li class="not-learned js"><a href="https://en.arguman.org/vanilla-javascript-is-better-than-any-plugin-or-framework">Vanilla Javascript is better than any plugin or framework</a></li>
+              <li class="not-learned js"><a href="http://en.arguman.org/react-is-killing-angular">React is killing Angular</a></li>
               <li><a href="https://habrahabr.ru/post/253297/" title="2017-07-23">Не учите фреймворки, учите архитектуру</a></li>
               <li><a href="http://simonenko.su/32197993404/use-css3-box-sizing" title="2017-07-19">Используйте свойство box-sizing</a></li>
               <li class="grid1"><a href="https://habrahabr.ru/post/332572/" title="2017-07-12">Правда ли уже пора использовать CSS Grid Layout?</a></li>
